publication, angilar file added to separate file

--- a/profapp/templates/_ruslan/partials/_header_files_grid.html
+++ b/profapp/templates/_ruslan/partials/_header_files_grid.html
@@ -1,8 +1,23 @@
 <!---?GRID?---->
-    <link rel="styleSheet" href="{{ static_address('css/ui-grid.css') }}"/>
-    <script src="{{ static_address('ui-grid/ui-grid.min.js') }}"></script>
-    <script src="{{ static_address('ui-grid/vfs_fonts.js') }}"></script>
-    <script src="{{ static_address('js/pr-grid-angular.js') }}"></script>
-    <script>
-           pr_angular_modules.push('ui.grid' , 'ui.grid.pagination' , 'ui.grid.edit', 'ui.grid.selection', 'ui.grid.grouping', 'ui.grid.treeView' );
-     </script>
+<link rel="styleSheet" href="{{ static_address('css/ui-grid.css') }}"/>
+<script src="{{ static_address('ui-grid/ui-grid.min.js') }}"></script>
+{#    <script src="{{ static_address('ui-grid/vfs_fonts.js') }}"></script>#}
+<script src="{{ static_address('js/pr-grid-angular.js') }}"></script>
+<style>
+
+    .pr-grid-cell-field-name-publications {
+        padding: 0px;
+    }
+
+    span.pr-grid-publications-vs {
+        min-width: 2.5em;
+        height: 100%;
+        padding: 4px 2px;
+        margin: 1px;
+        display: inline-block;
+    }
+
+</style>
+<script>
+    pr_angular_modules.push('ui.grid', 'ui.grid.pagination', 'ui.grid.edit', 'ui.grid.selection', 'ui.grid.grouping', 'ui.grid.treeView');
+</script>
