--- a/profapp/templates/_ruslan/_index_layout.html
+++ b/profapp/templates/_ruslan/_index_layout.html
@@ -42,7 +42,7 @@
 
     <script>
         var pr_angular_modules = ['ui.bootstrap', 'profireaderdirectives', 'ngSanitize', 'ajaxFormModule',
-            'ngAnimate', 'ngTouch'];
+            'ngAnimate', 'ngTouch', 'ngRoute'];
     </script>
 
     {{ config_variables()|safe }}
@@ -57,6 +57,8 @@
         <script src="{{ static_address('new/bootstrap/js/bootstrap.js') }}"></script>
 
         <script src="{{ static_address('new/angular/angular.min.js') }}"></script>
+        <script src="{{ static_address('new/angular-route/angular-route.js') }}"></script>
+
         <script src="{{ static_address('new/angular-bootstrap/ui-bootstrap.min.js') }}"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/1.1.0/ui-bootstrap.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/1.1.0/ui-bootstrap-tpls.min.js"></script>
@@ -139,7 +141,6 @@
 
         {% block portal_content %}{% endblock portal_content %}
     </div>
-
 
 {% endblock content %}
 
