--- a/profapp/templates/_ruslan/partials/_header_files_publish.html
+++ b/profapp/templates/_ruslan/partials/_header_files_publish.html
@@ -1,7 +1,5 @@
-
-
 <script>
-module.factory('$publish', ['$http', '$uibModal', function ($http, $uibModal) {
+    module.factory('$publish', ['$http', '$uibModal', function ($http, $uibModal) {
         return function (dict) {
             var modalInstance = $uibModal.open({
                 templateUrl: '{{ static_address('angular_templates/submit_publish_dialog.html') }}',
@@ -14,21 +12,33 @@ module.factory('$publish', ['$http', '$uibModal', function ($http, $uibModal) {
         }
     }]);
 
-module.controller('submit_publish_dialog', function ($scope, $ok, $uibModalInstance, action,
-                                                         material_id, publication_id, from_company_id, at_portal_id) {
+    module.controller('submit_publish_dialog', function ($scope, $ok, $uibModalInstance, action,
+                                                         material_id, publication_id, publication_membership_id) {
 
 
         $scope.$$translate = {{ translates('submit_publish_dialog')|safe }};
-        $scope.url_submit_to_portal = {{ raw_url_for('article.submit_publish')|safe }};
+        $scope.url_submit_or_publish_material = {{ raw_url_for('article.submit_or_publish_material')|safe }};
+        $scope.url_submit_or_publish_material = {{ raw_url_for('article.submit_or_publish_material')|safe }};
+        $scope.url_submit_or_publish = function () {
+
+            if (material_id) {
+                return $scope.url_submit_or_publish_material({'material_id': material_id,
+                    'SUBMIT_OR_PUBLISH': $scope.also_publish?'PUBLISH':'SUBMIT'});
+            }
+            else {
+                return $scope.url_submit_or_publish_material({'material_id': material_id,
+                    'SUBMIT_OR_PUBLISH': $scope.also_publish?'PUBLISH':'SUBMIT'});
+            }
+        }
+        {#        $scope.url_submit_to_portal = {{ raw_url_for('article.submit_or_publish_material')|safe }};#}
         {% raw %}
 
-        $scope.object_name = publication_id ? 'publication' : 'material';
         $scope.action = action;
         $scope.original_article = null;
 
         $scope.get_tags_for_selected_division = function (search_text) {
             var division = $scope.get_selected_division();
-            return _.filter($scope.data.at_portal.tags, function (tag) {
+            return _.filter($scope.data.publisher_membership.portal.tags, function (tag) {
                 return $scope.tag_is_allowed_for_division(division, tag) &&
                     ( (tag['text'].toString().toLowerCase().indexOf(search_text) !== -1) ||
                     (tag['description'].toString().toLowerCase().indexOf(search_text) !== -1) );
@@ -37,10 +47,8 @@ module.controller('submit_publish_dialog', function ($scope, $ok, $uibModalInsta
 
         $scope.data = {
             action: action,
-            at_portal: {'id': at_portal_id},
-            from_company: {'id': from_company_id},
-            publication: publication_id ? {'id': publication_id} : null,
-            material: material_id ? {'id': material_id} : null,
+            publisher_membership: {'id': publication_membership_id},
+            publication: publication_id ? {'id': publication_id} : {'material': {'id': material_id}},
         };
 
 
@@ -63,10 +71,12 @@ module.controller('submit_publish_dialog', function ($scope, $ok, $uibModalInsta
 
 
         $scope.get_selected_division = function () {
-            console.log($scope.data)
-            return (!$scope.data || !$scope.data.publication || !$scope.data.publication.portal_division_id || !$scope
-                .data.at_portal.divisions_publicable[$scope.data.publication.portal_division_id]) ? null : $scope.data.at_portal.divisions_publicable[$scope.data.publication.portal_division_id];
-
+            if ($scope.data && $scope.data.publisher_membership.portal, $scope.data.publication) {
+                return find_by_id($scope.data.publisher_membership.portal.divisions_publicable, $scope.data.publication.portal_division_id);
+            }
+            else {
+                return null;
+            }
         };
 
         $scope.is_selection_division_event = function () {
@@ -99,11 +109,11 @@ module.controller('submit_publish_dialog', function ($scope, $ok, $uibModalInsta
 
         $scope.visibility_available = function (visibility_type) {
 
-            if (!$scope.data || !$scope.data.membership || !$scope.data.publication_count) {
+            if (!$scope.data || !$scope.data.publisher_membership || !$scope.data.publication_count) {
                 return false;
             }
             var current = $scope.data.publication_count['by_status_visibility']['PUBLISHED'][visibility_type.toUpperCase()];
-            var available = $scope.data.membership.current_membership_plan_issued['publication_count_' + visibility_type.toLowerCase()];
+            var available = $scope.data.publisher_membership.current_membership_plan_issued['publication_count_' + visibility_type.toLowerCase()];
             if (available < 0) return true;
             if ($scope.original_article && $scope.original_article.visibility === visibility_type) return true;
             return available > current;
@@ -113,8 +123,4 @@ module.controller('submit_publish_dialog', function ($scope, $ok, $uibModalInsta
         {% endraw %}
 
     });
-</script>
-
-<script>
-{#    pr_angular_modules.push('ui.grid', 'ui.grid.pagination', 'ui.grid.edit', 'ui.grid.selection', 'ui.grid.grouping', 'ui.grid.treeView');#}
 </script>
