--- a/profapp/templates/portal/portal_publications.html
+++ b/profapp/templates/portal/portal_publications.html
@@ -3,6 +3,7 @@
 {% block head %}
     {{ super() }}
     {% include '_ruslan/partials/_header_files_grid.html' %}
+    {% include '_ruslan/partials/_header_files_publish.html' %}
 {% endblock head %}
 
 {% block title %}Profireader - {{ _('Publications') }}{% endblock title %}
