--- a/profapp/templates/_ruslan/partials/_header_files_publish.html
+++ b/profapp/templates/_ruslan/partials/_header_files_publish.html
@@ -13,7 +13,10 @@
     }]);
 
     module.controller('submit_publish_dialog', function ($scope, $ok, $uibModalInstance, action,
-                                                         material_id, publication_id, publication_membership_id) {
+                                                         request_from,
+                                                         material_id, publication_id,
+                                                         actor_membership_id, publisher_membership_id) {
+{#        TODO: OZ by OZ: publisher_membership_id is obsolete. we can get it from publication or material#}
 
         $scope.$$translate = {{ translates('submit_publish_dialog')|safe }};
         $scope.url_submit_or_publish_material = {{ raw_url_for('article.submit_or_publish_material')|safe }};
@@ -24,7 +27,9 @@
         $scope.url_submit_or_publish = function () {
             return material_id ?
                 $scope.url_submit_or_publish_material({'material_id': material_id}) :
-                $scope.url_publish({'publication_id': publication_id, 'membership_id': publication_membership_id});
+                $scope.url_publish({'publication_id': publication_id,
+                    'actor_membership_id': actor_membership_id,
+                    'request_from': request_from});
         };
 
         $scope.action = action;
@@ -44,7 +49,7 @@
 
         $scope.data = {
             action: action,
-            publisher_membership: {'id': publication_membership_id},
+            publisher_membership: {'id': publisher_membership_id},
             publication: publication_id ? {'id': publication_id} : null
         };
 
@@ -68,7 +73,7 @@
 
 
         $scope.get_selected_division = function () {
-            if ($scope.data && $scope.data.publisher_membership.portal, $scope.data.publication) {
+            if ($scope.data && $scope.data.publisher_membership.portal && $scope.data.publication) {
                 return find_by_id($scope.data.publisher_membership.portal.divisions_publicable, $scope.data.publication.portal_division_id);
             }
             else {
