--- a/profapp/templates/partials/base_profireader.html
+++ b/profapp/templates/partials/base_profireader.html
@@ -86,7 +86,7 @@
 
                 </ul>
                 <ul class="top-menu">
-                    <li><a class="read_btn" href="{{ url_for('index.list_reader') }}" title="{{ _('Read my feed') }}"><span
+                    <li><a class="read_btn" href="{{ url_for('index.index') }}" title="{{ _('Read my feed') }}"><span
                             class="tooltip">{{ _('Read my feed') }}</span></a></li>
                     <li><a class="messages_btn" href="#" title="{{ _('All Messages') }}"><span
                             class="tooltip">{{ _('All Messages') }}</span></a></li>
