--- a/profapp/templates/_ruslan/partials/_user_menu.html
+++ b/profapp/templates/_ruslan/partials/_user_menu.html
@@ -96,17 +96,14 @@
                             ng-class="{'selected': selected_user_menu == 'list_reader'}"><i
                             class="fa fa-newspaper-o"></i><span>{{ _('Стрічкa читача') }}</span></a></li>
                     <!-- @formatter:off  -->
-                    <li class="dropdown" ng-if="user"><a {% endraw %}{{ tbvm() }}{% raw %} href="{{ url_messenger }}"
-                                                                                           title="{{ ::_('All messages') }}"
-                                                                                           class="pr"
-                                                                                           ng-class="{'selected': selected_user_menu == 'messages'}"><i
-                            class="fa fa-envelope-o"></i><span>{{ _('Всі повідомлення') }}</span>
-                        <div
+                    <li class="dropdown" ng-if="user"><a {% endraw %}{{ tbvm() }}{% raw %}
+                            href="{{ url_messenger }}" title="{{ ::_('All messages') }}" class="pr"
+                            ng-class="{'selected': selected_user_menu == 'messages'}"><i
+                            class="fa fa-envelope-o"></i><span>{{ _('Всі повідомлення') }}</span><div
                                 ng-if="unread_message_count || unread_notification_count || contact_request_count"
                                 class="pa unread_messages_and_notifications_count">{{ unread_message_count +
                             unread_notification_count + contact_request_count}}
-                        </div>
-                    </a></li>
+                        </div></a></li>
                     <!-- @formatter:on  -->
                     <li class="dropdown" ng-if="user"><a {% endraw %}{{ tbvm() }}{% raw %}
                             href="{{ url_company_companies() }}"
